--- a/1411331037/week7_today0402/week7_today0402.vcxproj
+++ b/1411331037/week7_today0402/week7_today0402.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gradebook.cpp" />
     <ClCompile Include="week7_today0402.cpp" />
   </ItemGroup>
   <ItemGroup>
