--- a/1411331041/week7-2/week7-2.vcxproj.filters
+++ b/1411331041/week7-2/week7-2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="DOG.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DOG.h">
