--- a/1411331041/week7-2/week7-2.vcxproj
+++ b/1411331041/week7-2/week7-2.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="DOG.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DOG.h" />
